The team flow is underway

--- a/details.html
+++ b/details.html
@@ -53,6 +53,10 @@
                 <li>This is my own changes in Feature01</li>
                 <li>This is my own change was made locally and pushed to GitHub at the branch</li>
             </ol>
+                <li>Team flow started</li>
+            <ol>
+
+            </ol>
 	    <hr />
             <footer>
                 <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
