--- a/details.html
+++ b/details.html
@@ -55,6 +55,8 @@
             </ol>
             <ol>
                 <li>Team flow started</li>
+                <li>I think this is better</li>
+                <li>We have a merge tool</li>
             </ol>
 		<h1>This is my change! I think we need this</h1>
 
