--- a/details.html
+++ b/details.html
@@ -55,6 +55,7 @@
             </ol>
             <ol>
                 <li>Team flow started</li>
+                <li>Added another feature from dev1</li>
             </ol>
 		<h1>This is my change! I think we need this</h1>
 
