--- a/details.html
+++ b/details.html
@@ -59,6 +59,7 @@
                 <li>We have a merge tool</li>
             </ol>
 		<h1>This is my change! I think we need this</h1>
+		<h2>Solving conflict at GitHub</h2>
 
 	    <hr />
             <footer>
