--- a/details.html
+++ b/details.html
@@ -60,6 +60,10 @@
             </ol>
 		<h1>This is my change! I think we need this</h1>
 
+		<ol>
+			<li>Simple change made in GitHub</li>
+		</ol>
+
 	    <hr />
             <footer>
                 <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
